--- a/index.html
+++ b/index.html
@@ -604,12 +604,12 @@ async function cargarHero() {
   }
 }
 
-// Carrusel horizontal de Series
+// ✅ Carrusel horizontal de Series (ahora sí toma las más recientes del comentario)
 async function cargarSeries() {
   const contenedor = document.getElementById("seriesContainer");
   if (!contenedor) return;
 
-    try {
+  try {
     const url = "https://raw.githubusercontent.com/lzrdrz10/sv/main/Categorias/serie/index.html";
     const res = await fetch(url);
     if (!res.ok) throw new Error(`Error al cargar índice de series: ${res.status}`);
@@ -697,7 +697,7 @@ async function cargarVerticales() {
   }
 }
 
-
+// Carrusel de Kdramas
 async function cargarKdramas() {
   const contenedor = document.getElementById("kdramaCarousel");
   if (!contenedor) return;
@@ -797,6 +797,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
