--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Big Time Rush -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- One Punch Man -->
+<li>
+  <a href="../Series/serie116.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/a8BknzvFVK5EZ83rKg1a83iwaj0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">One Punch Man 2015</span>
+    <span class="hidden">La historia tiene lugar en una de las metrópolis ficticias de la Tierra, la Ciudad Z en Japón. El mundo está lleno de extraños monstruos que misteriosamente aparecen y causan muchos desastres. Saitama, el protagonista, es un poderoso superhéroe que derrota fácilmente a los monstruos u otros villanos con un único golpe. Debido a esto, Saitama ha encontrado aburrida su fuerza y siempre está tratando de encontrar rivales más poderosos que le puedan igualar. En sus aventuras se encuentra con nuevos amigos, enemigos y su propio discípulo, el cíborg Genos, y se une a la Asociación de Héroes para ganar fama por todas sus acciones para prevenir el mal. A pesar de derrotar a muchos enemigos poderosos que los principales héroes, incluso los de la Asociación de Héroes, son incapaces de derrotar, Saitama es incapaz de conseguir el reconocimiento de sus acciones en general. La mayoría de la gente lo discrimina por su apariencia física normal y algunos lo acusan de ser un héroe falso. Sólo un pequeño número de individuos reconocen su increíble talento y humildad hacia los demás.</span>
+  </a>
+</li>
+<!--FIN--><!-- Big Time Rush -->
 <li>
   <a href="../Series/serie115.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
