--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- One Punch Man -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- SPY×FAMILY -->
+<li>
+  <a href="../Series/serie117.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vaIREdPGZOnW9Jrs86mheVVlIQQ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">SPY×FAMILY 2022</span>
+    <span class="hidden">Un espía, una asesina y una telépata se juntan, fingen ser una familia, cada cual por sus razones, y esconden sus verdaderas identidades el uno del otro.</span>
+  </a>
+</li>
+<!--FIN--><!-- One Punch Man -->
 <li>
   <a href="../Series/serie116.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
