--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie y Teresa: La receta de la amistad -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie75.html">
+    <img src="https://image.tmdb.org/t/p/original/3qJO7F0Pwz67WhAIbHSs2U5Q0qs.jpg" alt="Barbie y Teresa: La receta de la amistad" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Barbie y Teresa: La receta de la amistad</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie74.html">
     <img src="https://image.tmdb.org/t/p/original/7vN3qU5i1gJXHulz9d95YhwaU3q.jpg" alt="Los jóvenes titanes en acción vs. Los jóvenes titanes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
