--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie y Teresa: La receta de la amistad -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bone Sickness -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie76.html">
+    <img src="https://image.tmdb.org/t/p/original/vqW3TfYBtaEWIuVdxHkxMeWtegk.jpg" alt="Bone Sickness" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Bone Sickness</div>
+  <div class="text-xs text-white/70">2004</div>
+</article><!-- Barbie y Teresa: La receta de la amistad -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie75.html">
     <img src="https://image.tmdb.org/t/p/original/3qJO7F0Pwz67WhAIbHSs2U5Q0qs.jpg" alt="Barbie y Teresa: La receta de la amistad" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
