Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Barbie y Teresa: La receta de la amistad -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bone Sickness -->
+<li>
+  <a href="../Peliculas/movie76.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vqW3TfYBtaEWIuVdxHkxMeWtegk.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bone Sickness 2004</span>
+    <span class="hidden">Kristen dedica su vida a cuidar de su marido que sufre una degenerativa enfermedad en los huesos. Ante la falta de cura mediante la medicina convencional, decide probar un nuevo y experimental tratamiento con terroríficos resultados.</span>
+  </a>
+</li>
+<!--FIN--><!-- Barbie y Teresa: La receta de la amistad -->
 <li>
   <a href="../Peliculas/movie75.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
