Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bone Sickness -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Propuesta -->
+<li>
+  <a href="../Peliculas/movie77.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bkbzlLA8HCEHRDxsTKGthII0BpW.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Propuesta 2009</span>
+    <span class="hidden">Cuando se entera de que está en peligro de perder su estatus de visado y de ser deportada, la arrogante redactora de libros Margaret Tate obliga a su asistente, Andrew Paxton, a casarse con ella.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bone Sickness -->
 <li>
   <a href="../Peliculas/movie76.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
