--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Propuesta -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tiempo de guerra -->
+<li>
+  <a href="../Peliculas/movie78.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/fkVpNJugieKeTu7Se8uQRqRag2M.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Tiempo de guerra 2025</span>
+    <span class="hidden">Un pelotón de SEALs de la Marina estadounidense en la casa de una familia iraquí supervisa el movimiento de las fuerzas estadounidenses a través de territorio insurgente.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Propuesta -->
 <li>
   <a href="../Peliculas/movie77.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
