Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tiempo de guerra -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jackpot: ¡Loteria mortal! -->
+<li>
+  <a href="../Peliculas/movie79.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jExWD6GuvfSgOMMG49CF9Z5C6ZN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Jackpot: ¡Lotería mortal! 2024</span>
+    <span class="hidden">En un futuro cercano, existe una "Gran Lotería". La trampa: matar al ganador antes del atardecer para reclamar legalmente su premio multimillonario. Cuando Katie Kim obtiene el boleto ganador por accidente, une fuerzas con el agente de protección de la lotería principiante Noel Cassidy, quien debe ayudarla a sobrevivir hasta el atardecer a cambio de una parte del premio.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tiempo de guerra -->
 <li>
   <a href="../Peliculas/movie78.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
