--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Barbie y Teresa: La receta de la amistad -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Capitan Avispa -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie80.html">
+    <img src="https://image.tmdb.org/t/p/original/zmthz3CuFljmBQcfuaz4hBNwbQ0.jpg" alt="Capitán Avispa" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Capitán Avispa</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Barbie y Teresa: La receta de la amistad -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie75.html">
     <img src="https://image.tmdb.org/t/p/original/3qJO7F0Pwz67WhAIbHSs2U5Q0qs.jpg" alt="Barbie y Teresa: La receta de la amistad" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
