Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Jackpot: ¡Loteria mortal! -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Capitan Avispa -->
+<li>
+  <a href="../Peliculas/movie80.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zmthz3CuFljmBQcfuaz4hBNwbQ0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Capitán Avispa 2024</span>
+    <span class="hidden">Avispatrópolis y el Reino de la Miel viven en armonía en el panal protegidos por el Héroe de ambos, el Capitán Avispa. Pero el malvado Avispón Jaques Poison y sus secuaces planean acabar con esa paz y apoderarse de ambas colonias.​​ Está en las manos del Capitán Avispa defender a los suyos a toda costa, como siempre, con nobleza, justicia e inocencia, resumido en su grito de guerra: “Fuerte y Valiente, nunca Miente!”… un enunciado, que será puesto a prueba por sus más grandes enemigos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Jackpot: ¡Loteria mortal! -->
 <li>
   <a href="../Peliculas/movie79.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
