Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Exterminio 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megalodon -->
+<li>
+  <a href="../Peliculas/movie82.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kBl4wXkKVZep4AVVxju67uh6uVV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Megalodón 2018</span>
+    <span class="hidden">Un submarino de aguas profundas, que forma parte de un programa internacional, es atacado por una enorme criatura y queda averiado en el fondo de la fosa oceánica más profunda del Pacífico, con su tripulación atrapada en el interior. El tiempo se acaba y un oceanógrafo chino, el Dr. Chang, recluta a Jonas Taylor, un especialista en rescate en aguas profundas, en contra de los deseos de su hija Suyin, que cree que puede rescatar a la tripulación por sus propios medios. Pero ambos deberán unir sus fuerzas para salvar a la tripulación y también al océano de una amenaza imparable: un tiburón prehistórico de 23 metros conocido con el nombre de Megalodón.</span>
+  </a>
+</li>
+<!--FIN--><!-- Exterminio 2 -->
 <li>
   <a href="../Peliculas/movie81.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
