--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megalodon -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megalodon 2: El gran abismo -->
+<li>
+  <a href="../Peliculas/movie83.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mBgynPDplmo5JTY9VfGqY35OjDu.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Megalodón 2: El gran abismo 2023</span>
+    <span class="hidden">Un equipo de investigación inicia una misión que va a explorar las profundidades más abismales del mar. Pero su viaje se convierte en caos cuando un malévolo operativo minero amenaza su misión y los obliga a librar una batalla de alto riesgo por la supervivencia. Enfrentados a colosales Megalodones y a implacables saqueadores medioambientales, nuestros héroes deben correr más rápido, ser más astutos y nadar a mayor velocidad que sus despiadados depredadores en una trepidante carrera contra el tiempo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Megalodon -->
 <li>
   <a href="../Peliculas/movie82.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
