--- a/Plataforma/paramount/index.html
+++ b/Plataforma/paramount/index.html
@@ -219,7 +219,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Big Time Rush -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Beekeeper: Sentencia de muerte -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie84.html">
+    <img src="https://image.tmdb.org/t/p/original/gBdhYoROX6SHE3vVnBfEHI7Ojma.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Beekeeper: Sentencia de muerte</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Big Time Rush -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie115.html">
     <img src="https://image.tmdb.org/t/p/original/9N61wXR7FqsuByDVSEjM6qcPhKH.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
