Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Megalodon 2: El gran abismo -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Beekeeper: Sentencia de muerte -->
+<li>
+  <a href="../Peliculas/movie84.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gBdhYoROX6SHE3vVnBfEHI7Ojma.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Beekeeper: Sentencia de muerte 2024</span>
+    <span class="hidden">La brutal campaña de venganza de un hombre adquiere dimensiones nacionales cuando se descubre que es un antiguo agente de una poderosa organización clandestina conocida como "Los apicultores".</span>
+  </a>
+</li>
+<!--FIN--><!-- Megalodon 2: El gran abismo -->
 <li>
   <a href="../Peliculas/movie83.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
