Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Beekeeper: Sentencia de muerte -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- M3GAN -->
+<li>
+  <a href="../Peliculas/movie85.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tv3Yjn78U8hFGFrkSypiIhHNUh3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">M3GAN 2022</span>
+    <span class="hidden">Cuando Gemma se convierte en la cuidadora de su sobrina huérfana de 8 años, Cady, Gemma no está segura ni preparada para ser madre. Bajo una intensa presión en el trabajo, Gemma decide emparejar su prototipo M3GAN con Cady en un intento de resolver ambos problemas, una decisión que tendrá consecuencias inimaginables.</span>
+  </a>
+</li>
+<!--FIN--><!-- Beekeeper: Sentencia de muerte -->
 <li>
   <a href="../Peliculas/movie84.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
