Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 31: Morir es el unico escape -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Milagro en la Celda 7 -->
+<li>
+  <a href="../Peliculas/movie88.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/scxBIHaT1ZiPDPJu3vKd9Yn5gBA.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Milagro en la Celda 7 2019</span>
+    <span class="hidden">Separado de su hija, un padre con una discapacidad intelectual debe probar su inocencia al ser arrestado por la muerte de la niña de un comandante.</span>
+  </a>
+</li>
+<!--FIN--><!-- 31: Morir es el unico escape -->
 <li>
   <a href="../Peliculas/movie87.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
