Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Schiave bianche: violenza in Amazzonia -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Peter Pan 2: El regreso al pais de Nunca Jamas -->
+<li>
+  <a href="../Peliculas/movie90.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kkFeLiMeih9jgXatztoloOyGSbc.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Peter Pan 2: El regreso al país de Nunca Jamás 2002</span>
+    <span class="hidden">Aunque su intención era secuestrar a Wendy, el capitán Garfio secuestra a la hija de esta para atraer a Peter Pan y tenderle una trampa. Wendy ya no cree ni en Peter Pan ni en la magia, pero tendrá que derribar los muros del escepticismo por su hija.</span>
+  </a>
+</li>
+<!--FIN--><!-- Schiave bianche: violenza in Amazzonia -->
 <li>
   <a href="../Peliculas/movie89.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
