Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Matrix -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los Tres Mosqueteros -->
+<li>
+  <a href="../Peliculas/movie92.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hLjpIN5HkFeW4sZZqThLvhCuWwK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los Tres Mosqueteros 1942</span>
+    <span class="hidden">Cantinflas y sus compañeros de correrías conocen a Reina, estrella cinematográfica que, acompañada de unos amigos, visita un cabaret de los bajos fondos. Cantinflas flirtea con ella y recupera un collar robado a la actriz. En agradecimiento Reina les invita a los estudios donde trabaja. Un golpe hace que el joven pierda el sentido. Soñará que es D’Artagnan y sus amigos los Tres Mosqueteros.</span>
+  </a>
+</li>
+<!--FIN--><!-- Matrix -->
 <li>
   <a href="../Peliculas/movie91.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
