Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bee Movie: La historia de una abeja -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Libro de la Vida -->
+<li>
+  <a href="../Peliculas/movie94.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/vUqYsOhwDAoFlN2hJktT0XoilXv.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El Libro de la Vida 2014</span>
+    <span class="hidden">La película cuenta el viaje de Manolo, un joven torero que se debate entre cumplir con las expectativas de su familia o seguir su corazón y dedicarse a su verdadera pasión: la música. Antes de escoger el camino que seguirá, emprende una aventura recorriendo tres mundos fantásticos, donde tendrá que superar sus peores miedos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Bee Movie: La historia de una abeja -->
 <li>
   <a href="../Peliculas/movie93.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
