Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El Libro de la Vida -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Kraven el cazador -->
+<li>
+  <a href="../Peliculas/movie95.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8banVgSwKRdCTME7Go92LOoAOti.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Kraven el cazador 2024</span>
+    <span class="hidden">El inmigrante ruso Sergei Kravinoff está en una misión para demostrar que es el mejor cazador del mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- El Libro de la Vida -->
 <li>
   <a href="../Peliculas/movie94.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
