--- a/index.html
+++ b/index.html
@@ -498,10 +498,12 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 
   </div>
-
+<footer>
   <div class="border-t border-white/10 mt-6 pt-4 text-center text-xs text-white/50">
     &copy; 2025 LzPlay. Todos los derechos reservados.
   </div>
+	<script async="async" data-cfasync="false" src="//pl27846147.effectivegatecpm.com/e40141178b5082ef8dd01a89a8e199ec/invoke.js"></script>
+<div id="container-e40141178b5082ef8dd01a89a8e199ec"></div>
 </footer>
 <script>
 // Función auxiliar para sanitizar cadenas HTML
@@ -783,6 +785,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
 
 
 
