--- a/index.html
+++ b/index.html
@@ -502,8 +502,17 @@ document.addEventListener("DOMContentLoaded", async () => {
   <div class="border-t border-white/10 mt-6 pt-4 text-center text-xs text-white/50">
     &copy; 2025 LzPlay. Todos los derechos reservados.
   </div>
-	<script async="async" data-cfasync="false" src="//pl27846147.effectivegatecpm.com/e40141178b5082ef8dd01a89a8e199ec/invoke.js"></script>
-<div id="container-e40141178b5082ef8dd01a89a8e199ec"></div>
+	Iframe sync
+<script type="text/javascript">
+	atOptions = {
+		'key' : '928fb23c16df73b9511fd9978cee9c9d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
 </footer>
 <script>
 // Función auxiliar para sanitizar cadenas HTML
@@ -785,6 +794,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </script>
 </body>
 </html>
+
 
 
 
