--- a/HOME/login.html
+++ b/HOME/login.html
@@ -186,7 +186,7 @@ button {
     <button id="btnCompartir" class="border-accent w-full" aria-label="Compartir LZPLAY">Compartir</button>
   </div>
 </main>
-
+<script type='text/javascript' src='//pl27846323.effectivegatecpm.com/03/f0/2f/03f02f1f55670f6954e4b19e5f82cc36.js'></script>
 <script>
 document.addEventListener('DOMContentLoaded', () => {
   const nombreUsuario = document.getElementById('nombreUsuario');
