--- a/HOME/PRUEBA.html
+++ b/HOME/PRUEBA.html
@@ -223,6 +223,16 @@
   <!-- Footer -->
   <footer>
     <p>© 2025 Disney+ Clone | Demo educativo</p>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '928fb23c16df73b9511fd9978cee9c9d',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/928fb23c16df73b9511fd9978cee9c9d/invoke.js"></script>
   </footer>
 
 </body>
