--- a/Peliculas/movie1.html
+++ b/Peliculas/movie1.html
@@ -90,6 +90,8 @@
             </div>
         </div>
     </div>
+    <script async="async" data-cfasync="false" src="//pl27846147.effectivegatecpm.com/e40141178b5082ef8dd01a89a8e199ec/invoke.js"></script>
+<div id="container-e40141178b5082ef8dd01a89a8e199ec"></div>
     <script>
   var rating = 7.4;
   var starContainer = document.getElementById('star-container');
