Crear/Actualizar HOME/Buscador2.html

--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Kraven el cazador -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Juego sucio -->
+<li>
+  <a href="../Peliculas/movie96.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/tFWFcc2DlAp02oyj3eCfxF220l3.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Juego sucio 2025</span>
+    <span class="hidden">Parker es un experto ladrón, muy profesional en lo suyo, que elabora sus golpes con una ética de trabajo clara y directa. Junto con Grofield, Zen y un equipo experto, todos se toparán con un robo que los enfrenta a la mafia de Nueva York.</span>
+  </a>
+</li>
+<!--FIN--><!-- Kraven el cazador -->
 <li>
   <a href="../Peliculas/movie95.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
